--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ cffi==1.11.5
 chardet==3.0.4
 Click==7.0
 cloudinary==1.16.0
-cryptography==2.4.2
+cryptography==2.8
 Flask==1.0.2
 Flask-Classy==0.6.10
 Flask-Cors==3.0.7
@@ -31,3 +31,5 @@ six==1.12.0
 SQLAlchemy==1.2.15
 urllib3==1.24.1
 Werkzeug==0.14.1
+factory_boy
+googlemaps
