general improvement for docker build

--- a/api/alembic.ini
+++ b/api/alembic.ini
@@ -35,7 +35,8 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres@localhost/Eve2
+#sqlalchemy.url = postgresql://postgres:127.0.0.1:5432/Eve2
+sqlalchemy.url = postgresql://postgres:123@db:5432/Eve2
 
 # Logging configuration
 [loggers]
